Ajout du support Bluetooth + Modification Template 'AppCompactActivity' vers 'SampleActivityBase'

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppThemeNoBar"
+        android:theme="@style/AppTheme"
         >
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -22,9 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CheckBluetooth" />
-        <activity android:name=".GameActivity" android:screenOrientation="landscape">
+        <activity android:name=".GameActivity" android:screenOrientation="landscape"></activity>
+        <activity android:name=".Jeu" android:screenOrientation="landscape">
         </activity>
+        <activity
+            android:name=".DeviceListActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/select_device"
+            android:theme="@android:style/Theme.Holo.Dialog"/>
     </application>
 
 </manifest>
