--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GameActivity" android:screenOrientation="landscape"></activity>
-        <activity android:name=".Jeu" android:screenOrientation="landscape">
-        </activity>
+        <activity android:name=".Jeu" android:screenOrientation="landscape"></activity>
         <activity
             android:name=".DeviceListActivity"
             android:configChanges="orientation|keyboardHidden"
